test: List.of로 교체